# tile-based-terrain

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/engine/: asset_registry.rs  file_manager.rs  input_manager.rs  mod.rs
src/engine/render/: camera.rs  gui.rs  lighting.rs  mesh.rs  mod.rs  renderer.rs  sky.rs  sprite_batch.rs
src/engine/render/shaders/: diffuse_light.wgsl  gui.wgsl  mesh.wgsl  sky.wgsl  smooth_light.wgsl  sprite_batch.wgsl  stars.wgsl  upscale_lightmap.wgsl
src/engine/render/shaders/lighting/: diffuse_light.wgsl  light_sources.wgsl  sky_light.wgsl  smooth_light.wgsl
src/game/: game.rs  mod.rs
src/game/entities/: bomb.rs  grass.rs  mod.rs
src/game/items/: definition.rs  inventory.rs  item_registry.rs  mod.rs  placeable.rs  projectile.rs
src/game/physics/: collider.rs  mod.rs  transform.rs
src/game/player/: player.rs
src/game/terrain/: chunk.rs  chunk_manager.rs  mod.rs  region.rs  terrain_generator.rs  tile.rs
